<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="title_text">This is your first step to perfection.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="hello">Hello</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Choose your avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Имя</string>
    <string name="name2" translatable="false">Фамилия</string>
    <string name="name3" translatable="false">Отчество</string>
    <string name="done" translatable="false">Done</string>
    <string name="exit" translatable="false">Exit</string>

</resources>